@@ -1,3 +1,15 @@
+2003-09-16  Bruno Haible  <bruno@clisp.org>
+
+	* envsubst.c: Include stdbool.h.
+	(all_variables): Change type to bool.
+	(main, find_variables, subst_from_stdin): Use bool.
+	* gettext.c: Include stdbool.h.
+	(add_newline, do_expand): Change type to bool. Make static.
+	(main, expand_escape): Use bool.
+	* ngettext.c: Include stdbool.h.
+	(do_expand): Change type to bool. Make static.
+	(main): Use bool.
+
 2003-09-14  Bruno Haible  <bruno@clisp.org>
 
 	* envsubst.c (main): Remove stdout write error check, now done in
